--- a/index.html
+++ b/index.html
@@ -5,51 +5,80 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Address Book</title>
+    <title>Address book</title>
   </head>
   <body>
     <div class="container">
-      <h1>Address Book</h1>
+      <h1>Address book</h1>
 
-      <div class="row">   
+      <div class="row">
         <div class="col-md-6">
           <h2>Add a contact:</h2>
           <form id="new-contact">
             <div class="form-group">
-              <label for="new-first-name">First Name</label>
-              <input id="new-first-name" type="text" class="form-control">
+              <label for="new-first-name">First name</label>
+              <input type="text" class="form-control" id="new-first-name">
             </div>
-
             <div class="form-group">
-              <label for="new-last-name">Last Name</label>
-              <input id="new-last-name" type="text" class="form-control">
+              <label for="new-last-name">Last name</label>
+              <input type="text" class="form-control" id="new-last-name">
             </div>
 
-            <div class="form-group">
-              <label for="new-address">Address</label>
-              <input id="new-address" type="text" class="form-control">
+            <div id="new-addresses">
+              <div class="new-address">
+                <div class="form-group">
+                  <label for="new-street">Street</label>
+                  <input type="text" class="form-control new-street">
+                </div>
+                <div class="form-group">
+                  <label for="new-city">City</label>
+                  <input type="text" class="form-control new-city">
+                </div>
+                <div class="form-group">
+                  <label for="new-state">State</label>
+                  <input type="text" class="form-control new-state">
+                </div>
+              </div>
             </div>
 
-        <button type="submit" class="btn">Add</button>
-      </form>
+            <div id="new-phones">
+              <div class='new-phone'>
+                  <div class='form-group'>
+                    <label for="new-phone">Phone</label>
+                    <input type="text" class="form-control new-phone">
+                  </div>
+              </div>
+            </div>                    
 
-      <h2>Contacts:</h2>
-      <ul id="contacts">
-      
-      </ul>
-      </div>
+            <span class="btn btn-primary" id="add-phone">Another phone</span>
+  
+            <span class="btn btn-primary" id="add-address">Another address</span>
 
-      <div class='col-md-6'>
-        <div id='show-contacts'>
-          <h2></h2>
+            <button type="submit" class="btn">Add</button>
+          </form>
 
-          <p>First name: <span class='firstname'></span></p>
+          <h2>Contacts:</h2>
+          <ul id="contacts">
 
-          <p>Last name: <span class='lastname'></span></p>
-
-          <p>Address: <span class='address'></span></p>
+          </ul>
         </div>
-       </div>
+
+        <div class="col-md-6">
+          <div id="show-contact">
+            <h2></h2>
+
+            <p>First name: <span class="first-name"></span></p>
+            <p>Last name: <span class="last-name"></span></p>
+            <p>Addresses:</p>
+            <ul id="addresses">
+
+            </ul>
+            <p>Phones:</p>
+            <ul id="phones">
+              
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </body>
